changed index to root path

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -5,4 +5,4 @@
   <% end %>
 </ul>
 <%= link_to 'Add a new bookmark', new_list_bookmark_path(@list) %>
-<%= link_to 'Back to index', lists_path %>
+<%= link_to 'Back to index', root_path %>
