--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -3,4 +3,4 @@
   <%= f.input :name %>
   <%= f.submit "Add", class: "btn btn-primary" %>
 <% end %>
-<%= link_to 'Back to index', lists_path %>
+<%= link_to 'Back to index', root_path %>
