--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,4 +1,5 @@
-<%= cl_image_tag("dkqqja4y1i1b4jesysjy", crop: :fill) %>
+<%# <%= cl_image_tag("dkqqja4y1i1b4jesysjy", crop: :fill) %> %>
+<%= cl_image_tag("dkqqja4y1i1b4jesysjy_wqo2oj", crop: :fill) %>
 <h1>Lists</h1>
 <ul>
 <% @lists.each do |list| %>
