--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -2,5 +2,5 @@
 <%= simple_form_for [ @list, @bookmark ] do |f| %>
   <%= f.input :comment %>
   <%= f.association :movie %>
-  <%= f.submit "Add", class: "btn btn-primary" %>
+  <%= f.submit "Add", class: "btn btn-dark" %>
 <% end %>
