--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,9 +1,21 @@
 <%= cl_image_tag @list.photo.key, :width=>800, :crop=>"scale" if @list.photo.attached? %>
-<h1><%= @list.name %></h1>
-<ul>
-  <% @movies.each do |movie| %>
-    <li><%= movie.title %></li>
-  <% end %>
-</ul>
-<%= link_to 'Add a new bookmark', new_list_bookmark_path(@list) %>
-<%= link_to 'Back to index', root_path %>
+
+<%# works for localhost:  %>
+<%# <%= cl_image_tag("dkqqja4y1i1b4jesysjy", crop: :fill) %>
+<%# works for production:  %>
+<%# <%= cl_image_tag("dkqqja4y1i1b4jesysjy_wqo2oj", crop: :fill) %>
+<div class="container p-0">
+  <div class="row justify-content-left">
+    <h1 class="p-0"><%= @list.name %></h1>
+    <% @movies.each do |movie| %>
+      <div class="card border rounded bg-light" style="width: 18rem;">
+        <div class="card-body bg-light col-12 col-lg-6 d-flex align-content-between flex-wrap">
+          <!-- This div is centered and takes 6 columns -->
+          <h5><%= movie.title %></h5>
+        </div>
+      </div>
+    <% end %>
+    <%= link_to 'Add a new bookmark', new_list_bookmark_path(@list), class: "btn btn-dark"%>
+    <%= link_to 'Back to index', root_path, class: "btn btn-dark " %>
+  </div>
+</div>
